--- a/alexandria/app/build.gradle
+++ b/alexandria/app/build.gradle
@@ -39,9 +39,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:multidex:1.0.1'
-    // Barcode scanning functionality
+    // Barcode scanning library
     compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
     compile 'com.google.zxing:core:3.2.0'
 }
