--- a/alexandria/app/src/main/AndroidManifest.xml
+++ b/alexandria/app/src/main/AndroidManifest.xml
@@ -26,13 +26,12 @@
         <activity
             android:label="@string/title_activity_settings"
             android:name=".SettingsActivity"
+            android:theme="@style/SettingsTheme"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
-
 
         <provider
             android:name=".data.BookProvider"
